--- a/src/Styles/KeySkillsComponent.css
+++ b/src/Styles/KeySkillsComponent.css
@@ -1,4 +1,4 @@
-.key-skills-form-feilds {
+.key-skills-form-fields {
   width: 100%;
   margin-top: 20px;
   display: grid;
@@ -8,9 +8,38 @@
   grid-column-gap: 20px;
   margin-bottom: 20px;
 }
-.MuiPaper-root.MuiPaper-elevation.Key-skills-paper {
-    width: 70%;
-    padding: 40px;
-    margin-right: 0px;
-    height: fit-content;
-  }
+
+.key-skills-form-fields .key-input-with-delete {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.key-skills-form-fields .key-input-with-delete .MuiSvgIcon-root:hover {
+  cursor: pointer;
+}
+
+.MuiPaper-root.MuiPaper-elevation.key-skills-paper {
+  width: 70%;
+  padding: 40px;
+  margin-right: 0px;
+  height: fit-content;
+}
+
+.MuiPaper-root.MuiPaper-elevation.key-skills-paper .key-skills-heading {
+  font-size: 17px;
+  letter-spacing: 0.5px;
+  margin-bottom: 15px;
+  font-family: "Poppins", sans-serif;
+}
+
+.MuiButtonBase-root.MuiButton-root.add-new-btn {
+  text-transform: none;
+  margin-bottom: 30px;
+}
+
+.MuiDivider-root.key-skills-divider {
+  border-bottom-width: 2px;
+  margin: 20px 0px;
+}
