--- a/src/Styles/PersonalInfoComponent.css
+++ b/src/Styles/PersonalInfoComponent.css
@@ -1,5 +1,5 @@
 .MuiPaper-root.MuiPaper-elevation.personal-info-paper {
-  width: 70%;
+  width: 75%;
   padding: 40px;
   margin-right: 0px;
   height: fit-content;
@@ -23,4 +23,24 @@
 .MuiDivider-root.personal-details-divider {
   border-bottom-width: 2px;
   margin: 20px 0px;
+}
+@media screen and (max-width: 1010px) {
+  .MuiPaper-root.MuiPaper-elevation.personal-info-paper{
+    width: 100%;
+    padding: 20px;
+
+  }
+}
+@media screen and (min-width: 1010px) and (max-width: 1300px) {
+  .MuiPaper-root.MuiPaper-elevation.personal-info-paper{
+    width: 90%;
+    padding: 40px;
+
+  }
+}
+@media screen and (max-width: 450px) {
+  .personal-info-form-fields {
+    grid-template-columns: 1fr;
+    
+  }
 }
