--- a/src/Styles/EachExperienceComponent.css
+++ b/src/Styles/EachExperienceComponent.css
@@ -15,3 +15,9 @@
   grid-row-gap: 20px;
   margin-bottom: 20px;
 }
+@media screen and (max-width: 450px) {
+  .experience-form-cont {
+    grid-template-columns: 1fr;
+    
+  }
+}
