--- a/src/Styles/EducationComponent.css
+++ b/src/Styles/EducationComponent.css
@@ -1,5 +1,5 @@
 .MuiPaper-root.MuiPaper-elevation.education-paper {
-  width: 70%;
+  width: 75%;
   padding: 40px;
   margin-right: 0px;
   height: fit-content;
@@ -19,4 +19,24 @@
   grid-column-gap: 40px;
   grid-row-gap: 20px;
   margin-bottom: 20px;
+}
+@media screen and (max-width: 450px) {
+  .education-form-cont {
+    grid-template-columns: 1fr;
+    
+  }
+}
+@media screen and (min-width: 1010px) and (max-width: 1300px) {
+  .MuiPaper-root.MuiPaper-elevation.education-paper{
+    width: 90%;
+    padding: 40px;
+
+  }
+}
+@media screen and (max-width: 1010px) {
+  .MuiPaper-root.MuiPaper-elevation.education-paper{
+    width: 100%;
+    padding: 20px;
+
+  }
 }
