fixed download resume

--- a/src/Styles/PreviewComponent.css
+++ b/src/Styles/PreviewComponent.css
@@ -33,5 +33,7 @@
 }
 
 .resume-preview-grid-item .resume-save-container .resume-back-next-container {
-  width: 50%;
+  width: 100%;
+  display: flex;
+  align-items: center;
 }
