--- a/src/Styles/TemplateHeader.css
+++ b/src/Styles/TemplateHeader.css
@@ -21,6 +21,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
+}
+
+.template-img-cont .template-profile-img {
+  width: 100%;
 }
 
 .template-img-text {
