--- a/src/Styles/MyResumes.css
+++ b/src/Styles/MyResumes.css
@@ -8,3 +8,15 @@
   display: flex;
   flex-wrap: wrap;
 }
+
+.my-resumes-container .no-resumes-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.my-resumes-container .no-resumes-container .no-resumes-text {
+  font-size: 15px;
+  font-weight: 500;
+}
