--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -32,15 +32,20 @@
   color: rgb(0, 98, 255);
 }
 
-.drawerLinks a{
+.drawerLinks a {
   margin-top: 30px;
 }
 
-.active{
-  color:rgb(0, 128, 255)
+.active {
+  color: rgb(0, 128, 255);
 }
 .MuiToolbar-root.MuiToolbar-regular {
   width: 100%;
   display: flex;
   justify-content: space-between;
+}
+@media screen and (min-width: 600px) and (max-width: 640px) {
+  .aboutUs{
+    margin-right: 0px !important;
+  }
 }
