--- a/src/Styles/Template2.css
+++ b/src/Styles/Template2.css
@@ -1,10 +1,10 @@
-.MuiPaper-root.css-3su884-MuiPaper-root {
+/* .MuiPaper-root.css-3su884-MuiPaper-root {
   /* padding: 20px; */
-  border-radius: 3px;
+  /* border-radius: 3px;
   width: 595px;
   height: 800px;
-  margin-right: 20px;
-}
+  margin-right: 20px; */
+ */
 
 .MuiContainer-root.css-1oqqzyl-MuiContainer-root {
   padding: 0px 20px;
