--- a/src/Styles/Template1.css
+++ b/src/Styles/Template1.css
@@ -1,9 +1,9 @@
-.MuiPaper-root.css-3su884-MuiPaper-root {
+/* .MuiPaper-root.css-3su884-MuiPaper-root {
   /* padding: 20px; */
-  border-radius: 3px;
+  /* border-radius: 3px;
   height: 800px;
   width: 595px;
-}
+} */ */
 
 .MuiContainer-root.css-1oqqzyl-MuiContainer-root {
   padding: 0px 20px;
