--- a/src/Styles/TemplateHeader.css
+++ b/src/Styles/TemplateHeader.css
@@ -15,7 +15,6 @@
 
 .template-img-cont {
   width: 90px;
-  height: 90px;
   border-radius: 50%;
   background-color: rgb(193, 193, 193);
   display: flex;
@@ -65,4 +64,16 @@
   font-size: 12px;
   padding: 0px 20px;
   padding-bottom: 13px;
+}
+@media screen and (max-width: 900px) {
+  .template-user-name {
+    font-size: 4vw;
+    font-weight: 600;
+  }
+  .template-user-details-cont {
+    margin-left: 15px;
+  }
+  .template-img-cont {
+    width: 30%;
+  }
 }
