--- a/src/Styles/TemplateHeading.css
+++ b/src/Styles/TemplateHeading.css
@@ -1,6 +1,8 @@
 .professional-experience-heading {
   font-size: 15px;
   font-weight: 600;
+  margin-top: 10px;
+  text-align: left;
 }
 
 .vertical-line {
