--- a/src/Styles/InputComponent.css
+++ b/src/Styles/InputComponent.css
@@ -22,11 +22,13 @@
 .MuiInputBase-input.MuiOutlinedInput-input::-webkit-outer-spin-button,
 .MuiInputBase-input.MuiOutlinedInput-input::-webkit-inner-spin-button {
   -webkit-appearance: none;
+  appearance: none;
   margin: 0;
 }
 
 .MuiInputBase-input.MuiOutlinedInput-input[type="number"] {
   -moz-appearance: textfield;
+  appearance: textfield;
 }
 
 .MuiInputBase-input.MuiOutlinedInput-input.MuiInputBase-inputMultiline {
